@@ -40,6 +40,8 @@ is($tzil->built_in->file('Build.PL')->slurp, $expected, 'Build.PL is exactly lik
 my $meta = CPAN::Meta->load_file($tzil->built_in->file('META.json'), { lazy_validation => 0 });
 my $configure_requires = $meta->effective_prereqs->requirements_for('configure', 'requires')->as_string_hash;
 is_deeply($configure_requires, { 'Module::Build::Tiny' => $mbt_version }, 'configure requires' );
+my $build_requires = $meta->effective_prereqs->requirements_for('build', 'requires')->as_string_hash;
+is_deeply($build_requires, { 'Module::Build::Tiny' => $mbt_version }, 'build requires' );
 
 done_testing;
 
